--- a/index.html
+++ b/index.html
@@ -1,201 +1,252 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="img/fav.png" />
-    <script src="https://kit.fontawesome.com/68e6190fbe.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
-    <link rel="stylesheet" href="css/style.css" />
-    <title>جی بی مووی | دانلود فیلم و سریال</title>
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="u-margin-small">
-        <button class="icon-btn icon-btn--bg-color-2 fa-solid fa-bars"></button>
-        <a href="index.html" class="header__text">جی بی مووی</a>
-      </div>
-      <div class="header__search-box u-margin-small">
-        <form id="search-form" class="header__search-form">
-          <button class="header__search-input-btn fa-solid fa-magnifying-glass"></button>
-          <input type="text" class="header__search-input" placeholder="جستجو کنید...">
-        </form>
-        <button id="search-btn" class="icon-btn icon-btn--small icon-btn--bg-color-2 fa-solid fa-magnifying-glass"></button>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="img/fav.png" />
+  <script src="https://kit.fontawesome.com/68e6190fbe.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <title>جی بی مووی | دانلود فیلم و سریال</title>
+</head>
 
-    <main class="main">
-      <section>
-        <div class="d-flex">
-          <h2 class="heading-primary">
-            <i class="fa-solid fa-fire-flame-curved"></i>
-            محبوب ترین فیلم های هفته
-          </h2>
-          <ul class="slider-control" id="control-1" dir="ltr">
-            <li class="slider-control__btn">
-              <button class="fas fa-angle-left icon-btn icon-btn--bg-color-1"></button>
-            </li>
-            <li class="slider-control__btn">
-              <button class="fas fa-angle-right icon-btn icon-btn--bg-color-1"></button>
-            </li>
-          </ul>
-        </div>
-        <div class="slider-container" dir="ltr">
-          <div class="slider-1">
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+<body>
+  <header class="header">
+    <div class="header__menu-btn-box">
+      <button id="menu-btn" class="icon-btn icon-btn--bg-color-2 fa-solid fa-bars"></button>
+      <a href="index.html" class="header__text">جی بی مووی</a>
+    </div>
+    <div class="header__search-box u-margin-small">
+      <form id="search-form" class="header__search-form">
+        <button class="header__search-input-btn fa-solid fa-magnifying-glass"></button>
+        <input type="text" class="header__search-input" placeholder="جستجو کنید...">
+      </form>
+      <button id="search-btn"
+        class="icon-btn icon-btn--small icon-btn--bg-color-2 fa-solid fa-magnifying-glass"></button>
+    </div>
+  </header>
+  <aside class="side-menu">
+    <div class="side-menu__login-btn-box">
+      <a href="login.html" class="side-menu__login-btn"><i class="fas fa-sign-in-alt"></i> ورود / ثبت نام</a>
+    </div>
+    <nav class="side-menu__nav">
+      <ul class="side-menu__list">
+        <li class="side-menu__item">
+          <a href="home.html" class="side-menu__link"><i class="fas fa-home side-menu__font-icon"></i> خانه</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="" class="side-menu__link"><i class="fas fa-video side-menu__font-icon"></i> فیلم و سریال</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="casts.html" class="side-menu__link"><i class="fas fa-theater-masks side-menu__font-icon"></i> هنرمندان</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="box-office.html" class="side-menu__link"><i class="fas fa-chart-bar side-menu__font-icon"></i> باکس آفیس</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="review.html" class="side-menu__link"><i class="fas fa-marker side-menu__font-icon"></i> نقد و تحلیل</a>
+        </li>
+        <li class="side-menu__sub-header">
+          <span class="side-menu__sub-header-text">ناحیه کاربری</span>
+        </li>
+        <li class="side-menu__item">
+          <a href="" class="side-menu__link"><i class="fas fa-user-circle side-menu__font-icon"></i> داشبورد</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="" class="side-menu__link"><i class="fas fa-star side-menu__font-icon"></i> اشتراک VIP</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="" class="side-menu__link"><i class="fas fa-play-circle side-menu__font-icon"></i> لیست تماشا</a>
+        </li>
+        <li class="side-menu__sub-header">
+          <span class="side-menu__sub-header-text">بیشتر</span>
+        </li>
+        <li class="side-menu__item">
+          <a href="" class="side-menu__link"><i class="fas fa-comments side-menu__font-icon"></i> درخواست فیلم/سریال</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="contact-us.html" class="side-menu__link"><i class="fas fa-fax side-menu__font-icon"></i> ارتباط با ما</a>
+        </li>
+        <li class="side-menu__item">
+          <a href="about-us.html" class="side-menu__link"><i class="fas fa-address-card side-menu__font-icon"></i> درباره ما</a>
+        </li>
+      </ul>
+    </nav>
+  </aside>
+
+  <main>
+    <section class="slider-section">
+
+        <h2 class="heading-primary slider-section__heading">
+          <i class="fa-solid fa-fire-flame-curved"></i>
+          محبوب ترین فیلم های هفته
+        </h2>
+        <ul class="slider-control" id="control-1" dir="ltr">
+          <li class="slider-control__btn">
+            <button class="fas fa-angle-left icon-btn icon-btn--bg-color-1"></button>
+          </li>
+          <li class="slider-control__btn">
+            <button class="fas fa-angle-right icon-btn icon-btn--bg-color-1"></button>
+          </li>
+        </ul>
+
+      <div class="slider-container" dir="ltr">
+        <div class="slider-1">
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
           </div>
         </div>
-      </section>
-      <section class="u-margin-top-8">
-        <div class="d-flex">
-          <h2 class="heading-primary">
-            <i class="fa-solid fa-fire-flame-curved"></i>
-            محبوب ترین سریال های هفته
-          </h2>
-          <ul class="slider-control" id="control-2" dir="ltr">
-            <li class="slider-control__btn">
-              <button class="fas fa-angle-left icon-btn icon-btn--bg-color-1"></button>
-            </li>
-            <li class="slider-control__btn">
-              <button class="fas fa-angle-right icon-btn icon-btn--bg-color-1"></button>
-            </li>
-          </ul>
-        </div>
-        <div class="slider-container" dir="ltr">
-          <div class="slider-2">
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+      </div>
+    </section>
+    <section class="slider-section">
+      
+        <h2 class="heading-primary slider-section__heading">
+          <i class="fa-solid fa-fire-flame-curved"></i>
+          محبوب ترین سریال های هفته
+        </h2>
+        <ul class="slider-control" id="control-2" dir="ltr">
+          <li class="slider-control__btn">
+            <button class="fas fa-angle-left icon-btn icon-btn--bg-color-1"></button>
+          </li>
+          <li class="slider-control__btn">
+            <button class="fas fa-angle-right icon-btn icon-btn--bg-color-1"></button>
+          </li>
+        </ul>
+      
+      <div class="slider-container" dir="ltr">
+        <div class="slider-2">
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
-            <div>
-              <div class="img-card">
-                <a href="#" class="img-card__poster">
-                  <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                  <span class="img-card__score">5.5</span>
-                </a>
-                <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-              </div>
+          </div>
+          <div>
+            <div class="img-card">
+              <a href="#" class="img-card__poster">
+                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <span class="img-card__score">5.5</span>
+              </a>
+              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
+  <div class="side-menu-overly" style="display: none;"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+  <script src="js/script.js"></script>
+</body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script src="js/script.js"></script>
-  </body>
 </html>
