--- a/index.html
+++ b/index.html
@@ -97,64 +97,55 @@
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
+                <img src="/img/post/fast--furious-9-2021.jpg" alt="پوستر فیلم" class="img-card__picture">
                 <span class="img-card__score">5.5</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Fast & Furious 9">Fast & Furious 9</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/jungle-cruise-2021.jpg" alt="پوستر فیلم" class="img-card__picture">
+                <span class="img-card__score">7.1</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Jungle Cruise">Jungle Cruise</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/legend-2015.jpg" alt="پوستر فیلم" class="img-card__picture">
+                <span class="img-card__score">6.9</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Legend">Legend</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/the-suicide-squad-2021.jpg" alt="پوستر فیلم" class="img-card__picture">
+                <span class="img-card__score">7.9</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="The Suicide Squad">The Suicide Squad</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/fear-street--part-two---1978-2021.jpg" alt="پوستر فیلم" class="img-card__picture">
+                <span class="img-card__score">6.8</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Fear Street: Part Two - 1978">Fear Street: Part Two - 1978</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/the-girl-next-door-2004.jpg" alt="پوستر فیلم" class="img-card__picture">
+                <span class="img-card__score">6.7</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-            </div>
-          </div>
-          <div>
-            <div class="img-card">
-              <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
-              </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="The Girl Next Door">The Girl Next Door</a>
             </div>
           </div>
         </div>
@@ -180,64 +171,55 @@
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/loki-2021.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">9.5</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Loki">Loki</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/evil-2019.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">7.7</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Evil">Evil</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/motherland--fort-salem-2020.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">7.2</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Motherland: Fort Salem">Motherland: Fort Salem</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/greys-anatomy-2005.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">7.5</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Grey's Anatomy">Grey's Anatomy</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/gossip-girl-2021.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">5.3</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Gossip Girl">Gossip Girl</a>
             </div>
           </div>
           <div>
             <div class="img-card">
               <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
+                <img src="img/post/animal-kingdom-2016.jpg" alt="پوستر سریال" class="img-card__picture">
+                <span class="img-card__score">8.2</span>
               </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
-            </div>
-          </div>
-          <div>
-            <div class="img-card">
-              <a href="#" class="img-card__poster">
-                <img src="img/fast--furious-9-2021.jpg" alt="" class="img-card__picture">
-                <span class="img-card__score">5.5</span>
-              </a>
-              <a href="#" class="img-card__name prime-link prime-link--medium">Fast & Furious 9</a>
+              <a href="#" class="img-card__name prime-link prime-link--medium" title="Animal Kingdom">Animal Kingdom</a>
             </div>
           </div>
         </div>
